--- a/stable-diffusion/configs/sd-objaverse-finetune-c_concat-256.yaml
+++ b/stable-diffusion/configs/sd-objaverse-finetune-c_concat-256.yaml
@@ -72,8 +72,7 @@ model:
 data:
   target: ldm.data.simple.ObjaverseDataModuleFromConfig
   params:
-    # root_dir: '/local/vondrick/ruoshi/objaverse/views_whole_sphere'
-    root_dir: '/local/vondrick/ruoshi/objaverse/views_whole_sphere_merged'
+    root_dir: 'views_whole_sphere'
     batch_size: 192
     num_workers: 16
     total_view: 4
